--- a/requirements (1).txt
+++ b/requirements (1).txt
@@ -1,7 +1,7 @@
-streamlit==0.83.0
-numpy==1.20.3
-pandas==1.2.4
-matplotlib==3.4.2
-seaborn==0.11.1
-scikit-learn==0.24.2
-streamlit==1.10.0 
+streamlit
+numpy
+pandas
+matplotlib
+seaborn
+scikit-learn
+
